# wanjplayer

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  CMakeLists.txt  COMMIT_MESSAGE.txt  LICENSE  README.md  build.sh  errmssg.txt  errormssg.txt  run_wayland.sh  validate_setup.sh  wanjplayer
.github/workflows/: c-cpp.yml
docs/: BUILD_SYSTEM_ENHANCEMENT.md  DEVELOPMENT.md  FINAL_FIXES_SUMMARY.md  FIXES_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  LOGGING_AND_SEEK_FIXES.md  LOGGING_CLEANUP.md  PLAYLIST_IMPROVEMENTS.md  QUICK_START.md  README.md  SEGFAULT_SOLUTION.md  STATUS_BAR_TIMER_IMPLEMENTATION.md  VIDEO_PLAYBACK_SOLUTION.md  WAVEFORM_VISUALIZATION.md  WORKING_STATUS.md  documentation.md
include/: about.hpp  canvas.hpp  lib_vlc.hpp  license_dialogbx.hpp  license_dlgbx.hpp  main_layout.hpp  main_window.hpp  media_ctrl.hpp  media_ctrls.hpp  media_pane.hpp  menubar.hpp  player.hpp  player_ui.hpp  player_ui_control.hpp  playlist.hpp  preferences.hpp  sidebar.hpp  statusbar.hpp  timer_calc.hpp  w_timer.hpp  wanjplayer.hpp  widgets.hpp  wx_widgets.hpp
libs/libvlcpp/: Makefile  Makefile.in  aclocal.m4  config.status  configure  libvlcpp.pc
libs/libvlcpp/Docs/html/: graph_legend.html  index.html
libs/libvlcpp/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1
libs/libvlcpp/vlcpp/: Doxyfile
libs/libvlcpp/vlcpp/Docs/html/: graph_legend.html  index.html
src/: about.cpp  canvas.cpp  events.cpp  license_dialogbx.cpp  license_dlgbx.cpp  main_layout.cpp  main_window.cpp  media_ctrl.cpp  media_ctrls.cpp  media_events.cpp  media_pane.cpp  menubar.cpp  player.cpp  player_ui_control.cpp  playlist.cpp  preferences.cpp  sidebar.cpp  statusbar.cpp  w_timer.cpp  wanjplayer.cpp
test_timer/: timer_test_checklist.txt
tests/: clean_gst_registry.sh  comprehensive_multimedia_test.sh  launch.sh  run_safe_video.sh  test_fixes.sh  test_improvements.sh  test_playlist.sh  test_status_bar_timer.sh  test_video.sh
utils/: file_utils.cpp  file_utils.hpp  gui_utils.cpp  gui_utils.hpp  log_utils.cpp  log_utils.hpp  performance_utils.cpp  performance_utils.hpp  queue_manager.cpp  queue_manager.hpp  string_utils.cpp  string_utils.hpp  time_formatter.cpp  time_formatter.hpp  utils.cpp  utils.hpp
